--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: RAG Pipeline CI/CD
 
 on:
   push:
@@ -9,20 +9,38 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip' # Speeds up subsequent runs
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install flake8 pytest
+          # Install only necessary packages for testing to save time
+          pip install pandas langchain-text-splitters sentence-transformers chromadb
+
+      - name: Lint with flake8
+        run: |
+          # Stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
       - name: Run Unit Tests
-        run: pytest
+        run: |
+          pytest tests/
+
+  deploy:
+    needs: test
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to Streamlit/HuggingFace
+        run: |
+          echo "Triggering deployment for Task 4 App..."
+          # Example: git push https://user:$TOKEN@huggingface.co/spaces/user/repo main
